--- a/index.html
+++ b/index.html
@@ -1,21 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single Price Grid Component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  Join our community
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Css -->
+    <link rel="stylesheet" href="./css/style.css" />
+
+    <title>Frontend Mentor | Single Price Grid Component</title>
+  </head>
+  <body>
+    <main class="container">
+      <article class="card">
+        <div class="card-message">
+          <h1 class="h1 color-cyan mb-lg">Join our community</h1>
+          <h3 class="h3 color-yellow mb-md">
+            30-day, hassle-free money back guarantee
+          </h3>
+          <p class="color-blue">
+            Gain access to our full library of tutorials along with expert code
+            reviews. Perfect for any developers who are serious about honing
+            their skills.
+          </p>
+        </div>
+        <div class="card-pricing bg-cyan color-white">
+          <h2 class="h2 mb-md">Monthly Subscription</h2>
+          <div class="pricing mb-sm">
+            <span class="pricing-count">$29</span>
+            <span class="pricing-duration">per month</span>
+          </div>
+          <p class="fs-md mb-lg">Full access for less than $1 a day</p>
+          <button class="btn btn-warning w-100">Sign Up</button>
+        </div>
+        <div class="card-que bg-blue color-white">
+          <h2 class="h2 mb-md">Why Us</h2>
+          <p>
+            Tutorials by industry expertsPeer & expert code reviewCoding
+            exercisesAccess to our GitHub reposCommunity forumFlashcard decksNew
+            videos every week
+          </p>
+        </div>
+      </article>
+    </main>
+    <!-- Join our community
 
   30-day, hassle-free money back guarantee
 
@@ -45,6 +88,6 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
-</body>
+  </footer> -->
+  </body>
 </html>
