Changed h3 tag to p tag

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <article class="card">
         <div class="card-message">
           <h1 class="h1 color-cyan mb-lg">Join our community</h1>
-          <h3 class="h3 color-yellow mb-md">
+          <p class="h3 color-yellow mb-md">
             30-day, hassle-free money back guarantee
-          </h3>
+          </p>
           <p class="color-blue">
             Gain access to our full library of tutorials along with expert code
             reviews. Perfect for any developers who are serious about honing
